--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oceano</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <h1>Sobre o Oceano</h1>  
+    <h1 class="center">Sobre o Oceano</h1>  
     <ul>
         <li>
             <a href="index.html">Home</a>
@@ -30,7 +31,7 @@
         <img src="assets/img/ocean-waves.jpg" alt="Foto base">
     </p>
     <p>
-    <h2>Exemplo em movimento</h2>
+    <h2 class="center">Exemplo em movimento</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/wqH_2z21zEc?si=C_-l3Jsdj64ZsRgd"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
