--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 class="center">Sobre o Oceano</h1>  
+    <h1 class="center">Sobre o Oceano</h1>
     <ul>
         <li>
             <a href="index.html">Home</a>
@@ -20,23 +20,30 @@
         <li>
             <a href="contato.html">Contato ONG Oceana</a>
         </li>
-    </ul>
-
-    <p>
-        O oceano é uma vasta extensão de água salgada que cobre aproximadamente 71% da superfície da Terra. Ele
-        desempenha um papel crucial na regulação do clima global, na oferta de recursos naturais e na sustentação da
-        vida marinha.
-    </p>
-    <p>
-        <img src="assets/img/ocean-waves.jpg" alt="Foto base">
-    </p>
-    <p>
-    <h2 class="center">Exemplo em movimento</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/wqH_2z21zEc?si=C_-l3Jsdj64ZsRgd"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>   
-    </p>
+    </ul>  
+    <div class="container">
+        <div>
+            <p>
+                O oceano é uma vasta extensão de água salgada que cobre aproximadamente 71% da superfície da Terra. Ele
+            desempenha um papel crucial na regulação do clima global, na oferta de recursos naturais e na sustentação da
+            vida marinha.
+            </p>
+        </div>
+        <div>
+            <p>
+            <img src="assets/img/ocean-waves.jpg" alt="Foto base">
+            </p>
+        </div>
+        <div>
+            <p>
+            <h2 class="center">Exemplo em movimento</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wqH_2z21zEc?si=C_-l3Jsdj64ZsRgd"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>   
+            </p>
+        </div>
+    </div>
 
 </body>
 
