atualizacao fonte e cores

--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <ul>
+    <ul id="menu">
         <li>
             <a href="index.html">Home</a>
         </li>
@@ -18,7 +18,7 @@
             <a href="https://oceana.org/oceana-international-offices/">Contato ONG Oceana</a>
         </li>
     </ul>
-    <h1> Entre em contato com a Ong Oceana</h1>
+    <h1 class="center"> Entre em contato com a Ong Oceana</h1>
     <form>
         <label for="nome">Nome:</label>
         <input type="text" id="nome">
