css simples concluído

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>  
     <div class="container">
         <div>
-            <p>
+            <p class="p40">
                 O oceano é uma vasta extensão de água salgada que cobre aproximadamente 71% da superfície da Terra. Ele
             desempenha um papel crucial na regulação do clima global, na oferta de recursos naturais e na sustentação da
             vida marinha.
@@ -31,7 +31,7 @@
         </div>
         <div>
             <p>
-            <img src="assets/img/ocean-waves.jpg" alt="Foto base">
+            <img class="wh" src="assets/img/ocean-waves.jpg" alt="Foto base">
             </p>
         </div>
         <div>
